Fix OptionForm rendering on mobile

--- a/resources/assets/src/stylus/common.styl
+++ b/resources/assets/src/stylus/common.styl
@@ -159,6 +159,16 @@ input:-webkit-autofill {
     td.value, td.key {
         border-top: 0;
     }
+
+    @media (max-width: 768px) {
+        td.value, td.key {
+            display: block;
+        }
+
+        td.value {
+            width: 90%;
+        }
+    }
 }
 
 .modal-danger .modal-title small {
